--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
@@ -52,7 +52,7 @@
             </p>
 
             <p>
-            <a href="@OdkRoutes.GroupAdmin.Members(Model.Chapter)" target="_blank"
+                <a href="@OdkRoutes.GroupAdmin.Members(Model.Chapter).Path" target="_blank"
                     data-live-url-base>
                     Preview members
                 </a>
