--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueAdminTabs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueAdminTabs.cshtml
@@ -5,9 +5,9 @@
 
 <ul class="nav nav-underline my-3">
     <li class="nav-item">
-        <a class="nav-link" data-menu-link="exact" href="@OdkRoutes.GroupAdmin.Venue(Model.Chapter, Model.Venue.Id)">Edit</a>
+        <a class="nav-link" data-menu-link="exact" href="@OdkRoutes.GroupAdmin.Venue(Model.Chapter, Model.Venue.Id).Path">Edit</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" data-menu-link href="@OdkRoutes.GroupAdmin.VenueEvents(Model.Chapter, Model.Venue.Id)">Events</a>
+        <a class="nav-link" data-menu-link href="@OdkRoutes.GroupAdmin.VenueEvents(Model.Chapter, Model.Venue.Id).Path">Events</a>
     </li>
 </ul>
