--- a/ODK.Web.Razor/Views/Shared/SiteAdmin/_IssueContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SiteAdmin/_IssueContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services.Issues.Models
+@using ODK.Services.Issues.ViewModels
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Account
