--- a/ODK.Web.Razor/Views/Shared/SiteAdmin/_IssuesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SiteAdmin/_IssuesContent.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Services.Issues.Models
+@using ODK.Services.Issues.ViewModels
 @using ODK.Web.Common.Routes
 @model IssuesAdminPageViewModel
 @inject IOdkRoutes OdkRoutes
