--- a/ODK.Web.Razor/Views/Shared/Account/_IssueContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_IssueContent.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Services.Issues.Models
+@using ODK.Services.Issues.ViewModels
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Account
