--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupConversationContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupConversationContent.cshtml
@@ -73,7 +73,7 @@
             TitleContentFunc = @<h5>Other conversations</h5>,
             BodyContentFunc = 
                 @<div class="list-group">
-                    @foreach (var dto in Model.OtherConversations.OrderByDescending(x => x.LastMessage.CreatedUtc))
+                    @foreach (var dto in Model.OtherConversations.OrderByDescending(x => x.LastMessage.Message.CreatedUtc))
                     {
                         <div class="list-group-item">
                             <div>
@@ -82,7 +82,7 @@
                                 </a>
                             </div>
                             <div>
-                                @dto.LastMessage.CreatedUtc.ToFriendlyDateTimeString(Model.Chapter.TimeZone)
+                                @dto.LastMessage.Message.CreatedUtc.ToFriendlyDateTimeString(Model.Chapter.TimeZone)
                             </div>
                         </div>
                     }
