--- a/ODK.Web.Razor/wwwroot/css/odk.css
+++ b/ODK.Web.Razor/wwwroot/css/odk.css
@@ -11847,6 +11847,9 @@ textarea.form-control-lg {
   --ss-border-radius: 0;
   display: flex;
 }
+.ss-main.ss-disabled {
+  --ss-disabled-color: var(--bs-secondary-bg);
+}
 .ss-main .ss-arrow {
   display: none;
 }
