optimise IsAdmin DB calls

--- a/ODK.Web.Razor/Pages/Groups/Members/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Members/Index.cshtml
@@ -12,8 +12,7 @@
 @{
     Layout = "_HomeLayout";
 
-    var chapter = Model.Chapter;
-    var viewModel = await MemberViewModelService.GetMembersPage(Model.MemberServiceRequest, chapter);
+    var viewModel = await MemberViewModelService.GetMembersPage(Model.MemberChapterServiceRequest);
 
     if (!viewModel.IsMember)
     {
