--- a/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
@@ -11,7 +11,7 @@
 
     var chapter = Model.Chapter;
     var viewModel = await EventViewModelService.GetEventPageViewModel(
-        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, chapter, Model.Shortcode);
+        Model.ServiceRequest, Model.CurrentMemberOrDefault, chapter, Model.Shortcode);
 
     Model.Title = $"{viewModel.Event.GetDisplayName()} | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
 }
